--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "cloudinary": "^1.23.0",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
